# midi-cc-threshold-to-note

./: Cargo.toml  README.md
eg-midi_cc_threshold-rs.lv2/: manifest.ttl  midi_cc_threshold.ttl
src/: lib.rs
