# The `Cargo.toml` file is pretty similiar too. This plugin needs no extra features, but it needs
# the `wmidi` crate, which provides the enums to handle MIDI messages. 
[package]
name = "midi_cc_threshold"
version = "0.1.0"
authors = ["NinjaKoala"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wmidi = "3.1.0"
lv2 = "0.6.0"
